--- a/style.css
+++ b/style.css
@@ -1,67 +1,95 @@
-body {
-    font-family: arial, helvetica, sans-serif;
-    font-size: 14px;
-    color: black;
-    background-color: #ffc;
-    margin: 20px;
-    padding: 0;
-}
+  /* BREAKPOINTS */
+  /* mobile : 480px,
+  tablet : 768px,
+  desktop : 1440px, */
 
-/* This is a comment, by the way */
+  /* todo - get cera pro font */
 
-p {
-    line-height: 21px;
-}
+  * {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+  }
 
-h1 {
-    color: #ffc;
-    background-color: #900;
-    font-size: 2em;
-    margin: 0;
-    margin-bottom: 7px;
-    padding: 4px;
-    font-style: italic;
-    text-align: center;
-    letter-spacing: 0.5em;
-    border-bottom-style: solid;
-    border-bottom-width: 0.5em;
-    border-bottom-color: #c00;
-}
+  .header {
+      padding: 20px;
+  }
 
-h2 {
-    color: white;
-    background-color: #090;
-    font-size: 1.5em;
-    margin: 0;
-    padding: 2px;
-    padding-left: 14px;
-}
+  .hero {
+      display: flex;
+      width: 100%;
+      border: 1px solid black;
+  }
 
-h3 {
-    color: #999;
-    font-size: 1.25em;
-}
+  .hero-left {
+      flex: 1;
+      padding: 40px;
+  }
 
-img {
-    border-style: dashed;
-    border-width: 2px;
-    border-color: #ccc;
-}
+  .hero-right {
+      flex: 0 1 700px;
+      padding: 0;
+  }
 
-a {
-    text-decoration: none;
-}
+  .hero-right>img {
+      object-fit: cover;
+      height: 100%;
+      width: 100%;
+      padding: 0;
+  }
 
-strong {
-    font-style: italic;
-    text-transform: uppercase;
-}
+  .container {
+      padding: 20px;
+  }
 
-li {
-    color: #900;
-    font-style: italic;
-}
+  .navbar>ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+  }
 
-table {
-    background-color: #ccc;
-}
+  .navbar {
+      display: flex;
+      justify-content: space-between;
+  }
+
+
+  .navbar-content {
+      display: flex;
+  }
+
+  .navbar-links {
+      padding: 5px;
+  }
+
+
+  .cards {
+      display: grid;
+      max-width: 1200px;
+      margin-inline: auto;
+      padding-inline: 24px;
+      grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+      gap: 24px;
+  }
+
+  .card {
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      transition: 0.3s;
+  }
+
+  .card:hover {
+      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  }
+
+  .card-container {
+      padding: 2px 16px;
+      border-top: 1
+  }
+
+  .footer {
+      margin-top: auto;
+      width: 100%;
+      border: 1px solid black;
+  }
+
+  /* MEDIA QUERIES */
