--- a/style.css
+++ b/style.css
@@ -3,12 +3,11 @@
   tablet : 768px,
   desktop : 1440px, */
 
-  /* todo - get cera pro font */
 
   * {
       margin: 0;
       padding: 0;
-      font-family: sans-serif;
+      font-family: 'PT Sans', 'sans-serif';
   }
 
   .header {
@@ -23,8 +22,21 @@
 
   .hero-left {
       flex: 1;
-      padding: 40px;
+      padding: 60px;
+      color: #ffffff;
+      background-color: #1c1c1c;
+
+      .hero-title {
+          font-weight: 34px;
+          margin-bottom: 30px;
+      }
+
+      .hero-subtitle {
+          margin-bottom: 20px;
+      }
   }
+
+
 
   .hero-right {
       flex: 0 1 700px;
@@ -63,29 +75,7 @@
   }
 
 
-  .cards {
-      display: grid;
-      max-width: 1200px;
-      margin-inline: auto;
-      padding-inline: 24px;
-      grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-      gap: 24px;
-  }
-
-  .card {
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-      transition: 0.3s;
-  }
-
-  .card:hover {
-      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-  }
-
-  .card-container {
-      padding: 2px 16px;
-      border-top: 1
-  }
-
+  /* FOOTER */
   .footer {
       margin-top: auto;
       width: 100%;
