--- a/style.css
+++ b/style.css
@@ -1,103 +1,512 @@
-  /* BREAKPOINTS */
-  /* mobile : 480px,
-  tablet : 768px,
-  desktop : 1440px, */
+#week1,
+#week2,
+#codewars,
+#employability-skills {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.bootcamp-link {
+    border: 3px solid #c3c3c3;
+    padding: 0.5rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #fff;
+}
+
+a:hover,
+a.active {
+    color: #E98015;
+}
+
+/* START MAIN STYLES */
+body {
+    font-family: 'PT Sans', 'sans-serif';
+    margin: 0;
+    padding: 0;
+    font-size: 1rem;
+    font-weight: 400;
+    color: #525252;
+    line-height: 1.7;
+}
+
+* {
+    outline: none;
+}
+
+.container {
+    max-width: 1140px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-between;
+}
+
+h1,
+
+h2,
+
+h3,
+
+h4,
+
+h5 {
+    margin: 0;
+    padding: 0;
+}
+
+h1,
+
+h2 {
+    font-weight: 800;
+}
+
+h1 {
+    font-size: 3rem;
+    line-height: 1.2;
+    margin-bottom: 1rem;
+}
+
+h2 {
+    font-size: 2.5rem;
+    color: #fff;
+    margin-bottom: 1rem;
+    line-height: 1.2;
+}
+
+h3 {
+    font-size: 1.4rem;
+    font-weight: 300;
+}
+
+h4 {
+    font-size: 1.2rem;
+    font-weight: 300;
+}
+
+h5 {
+    font-size: 1rem;
+}
+
+p {
+    margin: 0 0 1rem;
+}
+
+button.rounded {
+    background: #003166;
+    border: none;
+    color: #fff;
+    font-size: 16px;
+    border-radius: 30px;
+    padding: 10px 30px;
+    line-height: 1.5;
+    cursor: pointer;
+}
+
+p.large-paragraph {
+    font-size: 1.25rem;
+    font-weight: 300;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+/* END MAIN STYLES */
+
+/* START HEADER STYLES */
+#header-hero-container {
+    min-height: 600px;
+    height: calc(50vh);
+    position: relative;
+}
+
+header {
+    background: transparent;
+    padding: 1rem 0;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    position: fixed;
+    width: 100%;
+    z-index: 3;
+}
+
+#logo {
+    font-family: "Roboto", "Helvetica", "Sans-serif";
+    font-size: 1.7rem;
+    font-weight: 800;
+    color: #fff;
+    text-decoration: none;
+    position: relative;
+    top: 4px;
+}
+
+.hamburger-menu {
+    background-color: transparent;
+    border: 1px solid #fff;
+    padding: 3px 5px;
+    width: 30px;
+    cursor: pointer;
+    margin-top: 10px;
+    display: none;
+}
+
+.hamburger-menu .strip {
+    display: block;
+    height: 1px;
+    background-color: #fff;
+    margin: 4px 0;
+}
+
+header ul {
+    list-style-type: none;
+}
+
+header ul li {
+    display: inline-block;
+    margin: 0 15px;
+}
+
+#close-flyout {
+    display: none;
+}
+
+header ul li a {
+    color: #fff;
+    font-size: 16px;
+    text-decoration: none;
+}
+
+header ul.is-sticky li a {
+    color: #003166;
+}
+
+header ul li a:hover,
+header ul li a.active {
+    color: #E98015;
+}
+
+header ul.is-sticky li a:hover,
+header ul.is-sticky li a.active {
+    color: #E98015;
+}
+
+/* END HEADER STYLES */
+
+/* START HERO SECTION STYLES */
+#hero {
+    /* background: url('https://b.top4top.io/p_2091qtqre2.jpeg') center center no-repeat; */
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+}
+
+#hero .fade {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    /* background: rgba(0, 59, 54); */
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(0, 59, 54, 1) 35%, rgba(89, 17, 77, 1) 100%);
+    z-index: 1;
+}
+
+#hero .hero-text {
+    position: absolute;
+    top: 50%;
+    margin: -75px auto 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    color: #fff;
+    width: 500px;
+    text-align: center;
+}
+
+#hero .hero-text p {
+    line-height: 1.5em;
+    font-weight: 300;
+    font-size: 1rem;
+}
+
+/* END HERO SECTION STYLES */
 
 
-  * {
-      margin: 0;
-      padding: 0;
-      font-family: 'PT Sans', 'sans-serif';
-  }
+/* START ARTICLE CARDS STYLES */
+#article-cards {
+    margin: 4rem 0 6rem;
+    padding: 0 0 6rem;
+    border-bottom: 1px solid #ccc;
+}
 
-  .header {
-      padding: 20px;
-  }
+#article-cards p.large-paragraph {
+    width: 50%;
+    margin-bottom: 4rem;
+}
 
-  .hero {
-      display: flex;
-      width: 100%;
-      border: 1px solid black;
-  }
+#article-cards .flex {
+    flex-wrap: wrap;
+    padding: 0;
+}
 
-  .hero-left {
-      flex: 1;
-      padding: 60px;
-      color: #ffffff;
-      background-color: #1c1c1c;
+#article-cards .card {
+    width: 32%;
+    background: #f0f0f0;
+    margin-bottom: 2rem;
+    border-radius: 0.25rem;
+}
 
-      .hero-title {
-          font-weight: bold;
-          margin-bottom: 30px;
-          font-size: 25px;
-      }
+#article-cards .card img {
+    width: 100%;
+}
 
-      .hero-subtitle {
-          margin-bottom: 20px;
-      }
-  }
+#article-cards .card h3 {
+    color: #000;
+}
 
+#article-cards .card h3,
+#article-cards .card p {
+    padding-left: 1rem;
+}
 
+/* END ARTICLE CARD STYLES */
 
-  .hero-right {
-      flex: 0 1 700px;
-      padding: 0;
-  }
+/* START FOOTER STYLES */
+footer {
+    background: #333;
+    padding: 8rem 0;
+}
 
-  .hero-right>img {
-      object-fit: cover;
-      height: 100%;
-      width: 100%;
-      padding: 0;
-  }
+footer .flex {
+    padding-bottom: 6rem;
+    border-bottom: 1px solid #777;
+}
 
-  p {
-      line-height: 1.6;
-      font-size: 17px;
+footer h5 {
+    color: #fff;
+    margin-bottom: 1rem;
+    font-weight: 300;
+}
 
-  }
+footer .footer-about {
+    width: 50%;
+}
 
-  .container {
-      padding: 20px;
-      background-color: #EEF0EB;
-  }
+footer .footer-about p {
+    width: 50%;
+}
 
-  .card {
-      border: 1px solid grey;
-      margin: 10px;
-      background-color: #F4F9E9;
-  }
+footer .footer-follow {
+    width: 50%;
+}
 
-  .navbar>ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-  }
+footer .footer-follow ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
 
-  .navbar {
-      display: flex;
-      justify-content: space-between;
-
-  }
-
-
-  .navbar-content {
-      display: flex;
-  }
-
-  .navbar-links {
-      padding: 5px;
-      margin: 0 10px;
-  }
+footer .footer-follow ul li {
+    display: inline-block;
+    margin: 0 16px;
+}
 
 
+footer .footer-follow ul li:first-child {
+    margin-left: 0;
+}
 
-  /* FOOTER */
-  .footer {
-      margin-top: auto;
-      width: 100%;
-      border: 1px solid black;
+footer .footer-follow ul li a {
+    text-decoration: none;
+    color: #777;
+}
 
-  }
+footer .footer-follow ul li a:hover {
+    color: #fff;
+}
 
-  /* MEDIA QUERIES */
+footer small {
+    margin-top: 3rem;
+    font-size: 1rem;
+    display: block;
+    text-align: center;
+}
+
+footer small a {
+    color: #777;
+    text-decoration: none;
+}
+
+footer small a:hover {
+    color: #fff;
+}
+
+/* END FOOTER STYLES */
+
+/* START MEDIA QUERIES */
+@media (max-width: 991px) {
+    #logo {
+        top: 1px;
+    }
+
+    #nav-toggle {
+        display: block;
+    }
+
+    nav ul {
+        position: fixed;
+        background: #fff;
+        right: -100%;
+        top: 0;
+        margin: 0;
+        padding: 2rem;
+        height: 100%;
+        width: 300px;
+        box-sizing: border-box;
+        box-shadow: 5px 0 10px 3px #999;
+    }
+
+    #close-flyout {
+        position: absolute;
+        right: 2rem;
+        top: 1.5rem;
+        font-size: 30px;
+        color: #777;
+        cursor: pointer;
+        display: block;
+        line-height: 1;
+        margin: 0;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 20px 0;
+    }
+
+    nav ul li:first-child {
+        margin-top: 50px;
+    }
+
+
+    nav ul li a {
+        font-size: 20px;
+        color: #003166;
+    }
+
+    nav ul li a.active,
+    nav ul li a:hover {
+        color: #E98A15;
+    }
+}
+
+@media (max-width: 767px) {
+    h1 {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 1.75rem;
+    }
+
+    h3 {
+        font-size: 1.2rem;
+    }
+
+    .large-paragraph {
+        font-size: 1rem;
+    }
+
+    p {
+        font-size: 0.8rem;
+    }
+
+    .container {
+        max-width: 540px;
+    }
+
+    #hero .hero-text {
+        width: 400px;
+    }
+
+    #article-cards .card {
+        width: 49%;
+    }
+
+    footer {
+        padding: 6rem 0;
+    }
+
+    footer .flex {
+        flex-wrap: wrap;
+    }
+
+    footer .flex>div {
+        width: 100%;
+        margin-top: 1rem;
+    }
+
+    footer .flex>div:first-child {
+        margin-top: 0;
+    }
+
+    footer .footer-about p {
+        font-size: 1rem;
+        width: 100%;
+    }
+}
+
+@media (max-width: 500px) {
+    #hero .hero-text {
+        width: 330px;
+    }
+
+    #article-cards {
+        margin: 4rem 0 3rem;
+        padding: 0 0 3rem;
+    }
+
+    #article-cards .card {
+        width: 100%;
+    }
+
+    #article-cards p.large-paragraph {
+        width: 100%;
+    }
+
+    #contact {
+        padding: 4rem 0;
+    }
+
+    #contact h2 {
+        margin-bottom: 2rem;
+    }
+
+    #form-container {
+        padding: 1.5rem;
+    }
+
+    footer {
+        padding: 4rem 0;
+    }
+}
+
+@media (max-width: 400px) {
+    #hero .hero-text {
+        max-width: 275px;
+        width: 100%;
+    }
+
+    nav ul {
+        width: 200px;
+    }
+}
+
+/* END MEDIA QUERIES */
